package java;

public interface Updatable {

    public void update();

}
